; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_util.c_bitrev16.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_util.c_bitrev16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bitrev16(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = and i32 %3, 255
  %5 = call i32 @bitrev(i32 %4)
  %6 = shl i32 %5, 8
  %7 = load i32, i32* %2, align 4
  %8 = and i32 %7, 65280
  %9 = ashr i32 %8, 8
  %10 = call i32 @bitrev(i32 %9)
  %11 = or i32 %6, %10
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @bitrev(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
